syntax = "proto3";

option go_package = "/api/order;opb";

import "google/api/annotations.proto";

package order;

message OrderReq{
  string source = 1;
  string source_id = 2;
  string mobile = 3;
  string share_num = 4;
  string send_msn = 5;
  string order_info = 6;
}

message OrderResp{
  int32 stat = 1;
  OrderResultInfo data = 2;
}

message OrderResultInfo{
  string order_num = 1;
  string user_id = 2;
  string is_exist_order = 3;
}

service OrderService{
  rpc AutoOrder(OrderReq) returns (OrderResp){
    option (google.api.http) = {
      post: "/order/auto_order"
      body: "*"
    };
  }
}
